correcciones en ejemplos de RequestDispatcher

--- a/src/main/webapp/login-try.html
+++ b/src/main/webapp/login-try.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <form method="post" action="login">
+    <h2 style="color:red;">username o password invalido</h2>
     <label>username: </label>
     <input type="text" name="username"><br/>
     <label>password: </label>
